chore: minor stylings update

--- a/uasdm-ui/src/app/site/component/modal/tus-upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/tus-upload-modal.component.html
@@ -24,7 +24,7 @@
           <div class="col-md-1"></div>
           <div class="col-md-10">
             <div class="form-group">
-              <boolean-field [(value)]="metadata.processOrtho" label="Generate png from upload"></boolean-field>
+              <boolean-field [(value)]="metadata.processOrtho" label="Generate PNG"></boolean-field>
             </div>
           </div>
         </div>
