--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -76,7 +76,7 @@
         <div class="col-sm-12" style="text-align: right; padding-top: 10px; padding-right: 0;">
           <button
 			  type="button"
-			  class="advanced-filter btn btn-outline-secondary btn-sm rounded-pill d-inline-flex align-items-center gap-1 advanced-filter fs-6"
+			  class="advanced-filter btn btn-outline-secondary btn-sm d-inline-flex align-items-center gap-1 advanced-filter fs-6"
 			  (click)="onFilterOpen()"
 			  title="Show advanced filters"
 			>
