--- a/uasdm-ui/src/app/site/component/report/reports.component.html
+++ b/uasdm-ui/src/app/site/component/report/reports.component.html
@@ -8,7 +8,7 @@
 
     <!-- Title + underline + action -->
     <div class="section-header">
-      <h2 class="h6 mb-0">Report</h2>
+      <h2 class="h6 mb-0">Collection Report</h2>
       <div class="rule flex-grow-1 mx-2"></div>
       <button
         type="button"
