--- a/uasdm-ui/src/app/site/component/metadata-page/metadata-page.component.html
+++ b/uasdm-ui/src/app/site/component/metadata-page/metadata-page.component.html
@@ -7,7 +7,7 @@
     <div *ngIf="page.selection.pointOfContact != null" class="row" style="margin-top: 20px;">
         <div class="col-md-12">
 
-            <div class="card">
+            <div class="card border mb-2">
                 <div class="card-header">Point Of Contact</div>
                 <div class="card-body">
                     <div class="form-group">
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-12">
 
-            <div class="card">
+            <div class="card border mb-2">
                 <div class="card-header">Collection</div>
                 <div class="card-body">
                     <div [@fadeInOnEnter] class="row">
@@ -134,7 +134,7 @@
     <div class="row" *ngIf="page.selection.artifacts != null && page.selection.artifacts.length > 0">
         <div class="col-md-12">
 
-            <div class="card">
+            <div class="card border mb-2">
                 <div class="card-header">Artifacts</div>
                 <div class="card-body">
                     <div class="card" *ngFor="let artifact of page.selection.artifacts">
@@ -180,7 +180,7 @@
     <div class="row">
         <div class="col-md-12">
 
-            <div class="card">
+            <div class="card border mb-2">
                 <div class="card-header">Platform</div>
                 <div class="card-body">
                     <div class="form-group">
@@ -250,7 +250,7 @@
     <div *ngIf="uav != null" class="row">
         <div class="col-md-12">
 
-            <div class="card">
+            <div class="card border mb-2">
                 <div class="card-header">Sensor</div>
                 <div class="card-body">
                     <div class="form-group">
