--- a/uasdm-ui/src/app/site/component/uav/uav.component.html
+++ b/uasdm-ui/src/app/site/component/uav/uav.component.html
@@ -58,13 +58,13 @@
           <organization-field name="organization" [(value)]="uav.organization" [disabled]="mode === 'READ'" [required]="true">
           </organization-field>
         </div>
-        <div *ngIf="isAdmin && mode === 'WRITE'" class="btn-holder" style="text-align: right;">
-          <button *ngIf="!newInstance" type="button" class="btn btn-default" (click)="handleOnCancel()">Cancel</button>
-          <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()"
+        <div *ngIf="isAdmin && mode === 'WRITE'" class="btn-holder mt-2" style="text-align: right;">
+          <button *ngIf="!newInstance" type="button" class="btn btn-default p-2" (click)="handleOnCancel()">Cancel</button>
+          <button type="submit" class="btn btn-primary p-2" (click)="handleOnSubmit()"
             [disabled]="!ngForm.valid">Apply</button>
         </div>
-        <div *ngIf="isAdmin && mode === 'READ'" class="btn-holder" style="text-align: right;">
-          <button type="submit" class="btn btn-primary" (click)="handleOnEdit()">Edit</button>
+        <div *ngIf="isAdmin && mode === 'READ'" class="btn-holder mt-2" style="text-align: right;">
+          <button type="submit" class="btn btn-primary p-2" (click)="handleOnEdit()">Edit</button>
         </div>
       </form>
     </div>
