chore: refactored product controller to use spring

--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -21,7 +21,7 @@
       <div class="col-md-2"></div>
     </div>
     
-    <div *ngIf="config" class="card border border-secondary">
+    <div *ngIf="config" class="card border border-secondary mb-2">
     	<div class="card-header bg-secondary">
     		Basic Information
     	</div>
@@ -55,7 +55,7 @@
 	    </div>
 	</div>
     
-    <div *ngIf="config" class="card border border-secondary">
+    <div *ngIf="config" class="card border border-secondary mb-2">
     	<div class="card-header bg-secondary">
     		Configuration
     	</div>
@@ -149,7 +149,7 @@
 	    </div>
 	</div>
 	
-	<div *ngIf="odmRun && odmRun.output" class="card border border-secondary">
+	<div *ngIf="odmRun && odmRun.output" class="card border border-secondary mb-2">
     	<div class="card-header bg-secondary">
     		Output
     	</div>
