--- a/uasdm-ui/src/app/core/component/login/login-header.component.html
+++ b/uasdm-ui/src/app/core/component/login/login-header.component.html
@@ -8,7 +8,7 @@
   <nav class="navbar navbar-grey p-0 bg-secondary">
     <div class="container-fluid">
       <a class="navbar-brand p-0" href="#/login" title="Home">
-        <img [src]="context + 'logo/view?id=logo'"
+        <img [src]="context + 'api/logo/view?oid=logo'"
           class="d-inline-block align-text-top" />
       </a>
     </div>
