--- a/uasdm-ui/src/app/shared/component/header/header.component.html
+++ b/uasdm-ui/src/app/shared/component/header/header.component.html
@@ -8,7 +8,7 @@
   <nav class="navbar navbar-grey p-0">
     <div class="container-fluid">
       <a class="navbar-brand p-0" href="#" title="Home">
-        <img style="width: 40px; height: 40px;" [src]="context + 'logo/view?id=logo'"
+        <img style="width: 40px; height: 40px;" [src]="context + 'api/logo/view?oid=logo'"
           class="d-inline-block align-text-top" />
       </a>
       <!-- <p class="navbar-brand" style="margin: 0;" >{{title}}</p> -->
