chore: change text to process imagery

--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -306,7 +306,7 @@
                 <button *ngIf="processable && enableSelectableImages"
                   [disabled]="processRunning || !canReprocessImagery" (click)="handleRunOrtho()" class="btn btn-primary"
                   title="Reprocesses the selected raw imagery and generates new products." style="margin-left: 5px;">
-                  Reprocess Imagery
+                  Process Imagery
                   <i class="fa fa-sync-alt" [ngClass]="{'fa-spin' : processRunning}" aria-hidden="true"
                     style="color:white;vertical-align: middle;margin-left: 10px;"></i>
                 </button>
