chore: link to task page from upload modal

--- a/uasdm-ui/src/app/site/component/modal/tus-upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/tus-upload-modal.component.html
@@ -220,7 +220,10 @@
             <div class="card-body">
               <h4>
                 Status:
-                <b> Upload successfully completed </b>
+                <b> 
+                  Upload successfully completed and the files are being copied to S3. 
+                  See the <a routerLink="/site/tasks">task page</a> for more details.
+                </b>
               </h4>
             </div>
           </div> <!-- End task finished upload notification -->
