--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -74,15 +74,12 @@
     <div class="col-md-12">
       <div class="row" style="margin-right: 10px;">
         <div class="col-sm-12" style="text-align: right; padding-top: 10px; padding-right: 0;">
-          <button
-			  type="button"
-			  class="advanced-filter btn btn-outline-secondary btn-sm d-inline-flex align-items-center gap-1 advanced-filter fs-6"
-			  (click)="onFilterOpen()"
-			  title="Show advanced filters"
-			>
-			  <i class="fa" [ngClass]="{'fa-filter' : !hasFilter, 'fa-funnel-dollar': hasFilter}" aria-hidden="true"></i>
-			  <span>Advanced filter</span>
-			</button>
+          <button type="button"
+            class="advanced-filter btn btn-outline-secondary btn-sm d-inline-flex align-items-center gap-1 advanced-filter fs-6"
+            (click)="onFilterOpen()" title="Show advanced filters">
+            <i class="fa" [ngClass]="{'fa-filter' : !hasFilter, 'fa-funnel-dollar': hasFilter}" aria-hidden="true"></i>
+            <span>Advanced filter</span>
+          </button>
         </div>
       </div>
 
@@ -425,8 +422,7 @@
             <alert *ngIf="task.status === 'Complete' && task.actions.length !== 0" type="warning" [dismissible]="true"
               (onClosed)="handleCloseToast(idx)">
               <strong>Upload {{task.status}}</strong> for {{task.collectionLabel}}. Task completed with warnings.
-              See
-              the <a routerLink="/site/tasks">task page</a> for more details.
+              See the <a routerLink="/site/tasks">task page</a> for more details.
             </alert>
             <alert *ngIf="task.status === 'Failed'" type="danger" [dismissible]="true"
               (onClosed)="handleCloseToast(idx)">
@@ -481,7 +477,8 @@
                     </div>
                   </div>
                   <div class="row-form">
-                    <button class="btn btn-outline-secondary btn-sm" (click)="handleStacLayer()" title="Create a layer"><i class="fa fa-plus"></i>&nbsp;Create layer</button>
+                    <button class="btn btn-outline-secondary btn-sm" (click)="handleStacLayer()"
+                      title="Create a layer"><i class="fa fa-plus"></i>&nbsp;Create layer</button>
                   </div>
 
                   <ng-container *ngIf="hierarchy.oid != null && hierarchy.oid.length > 0">
