fix(radometric): new 'radiometric' sensor flag w/ tif upload reqs

--- a/uasdm-ui/src/app/site/component/modal/tus-upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/tus-upload-modal.component.html
@@ -152,7 +152,7 @@
                 </tr>
               </thead>
               <tbody *ngIf="uploadTarget === 'raw'">
-                <ng-container *ngIf="!component.isLidar">
+                <ng-container *ngIf="!component.isLidar && !component.isRadiometric">
                   <tr>
                     <td>RGB Image Data</td>
                     <td>jpg, jpeg, png</td>
@@ -166,6 +166,12 @@
                   <tr>
                     <td>Pointcloud</td>
                     <td>laz, las</td>
+                  </tr>
+                </ng-container>
+                <ng-container *ngIf="component.isRadiometric">
+                  <tr>
+                    <td>Radiometric Data</td>
+                    <td>tif</td>
                   </tr>
                 </ng-container>
                 <tr>
