chore(upload): notification on upload about radiometric sensor

--- a/uasdm-ui/src/app/site/component/modal/tus-upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/tus-upload-modal.component.html
@@ -132,6 +132,10 @@
         <div *ngIf="!existingTask">
 
           <div class="card card-body bg-light">
+            <div *ngIf="uploadTarget === 'raw' && component && component.isRadiometric" style="padding: 8px; background-color: #fff9f3; border-left: 4px solid #e4a664;">
+              <h4>Radiometric Sensor</h4>
+              <span>You are uploading to a radiometric sensor. These sensors capture scientific temperature or reflectance data, not standard RGB imagery. Imagery must contain a single band in .tif format — not RGB. Radiometric calibration is automatically enabled (as CAMERA), but if your sensor supports CAMERA+SUN, you may enable that during processing.</span>
+            </div>
             <h4>All uploaded files</h4>
             <ul>
               <li *ngIf="uploadTarget === 'raw'">Must be compressed into a .zip or .tar.gz format.</li>
