chore(radiometric): improve stylings and explanatory text

--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -111,7 +111,7 @@
 	            <select [(ngModel)]="config.radiometricCalibration" name="radiometricCalibration" class="form-control" disabled>
 	                <option value="NONE">NONE</option>
 	                <option value="CAMERA">CAMERA</option>
-	                <option value="CAMERA_SUN">CAMERA+SUN</option>
+	                <option value="CAMERA_SUN">CAMERA+SUN (experimental)</option>
 	            </select>
 	        </div>
 	
