--- a/uasdm-ui/src/app/site/component/modal/process-run-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/process-run-modal.component.html
@@ -64,7 +64,7 @@
 						class="form-control" disabled>
 						<option value="NONE">NONE</option>
 						<option value="CAMERA">CAMERA</option>
-						<option value="CAMERA_SUN">CAMERA+SUN</option>
+						<option value="CAMERA_SUN">CAMERA+SUN (experimental)</option>
 					</select>
 				</div>
 
