chore: fix of styling issues + updated elastic search version to most recent minor release

--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -238,7 +238,7 @@
 
               <div class="image-list-container">
                 <ul class="list-group row">
-                  <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
+                  <li *ngFor="let item of page.results" class="list-group-item col-3">
                     <div class="thumbnail" (click)="showVideo(item)">
                       <img [src]="context + '/assets/thumbnail-video.png'" alt="Video">
                       <div class="caption">
